firmware/lib/control-table/tests/ui/tuple_struct.stderr
error: Block requires a struct with named fields
 --> tests/ui/tuple_struct.rs:3:1
  |
3 | / #[repr(C)]
4 | | #[derive(Block)]
5 | | struct Tup(u8, u16);
  | |____________________^
