firmware/lib/control-table/tests/ui/tuple_struct.rs
use control_table::Block;

#[repr(C)]
#[derive(Block)]
struct Tup(u8, u16);

fn main() {}
